src/libqplaintextedit.bf

	[LinkName("QPlainTextEdit_FocusNextPrevChild")]
	public static extern bool QPlainTextEdit_FocusNextPrevChild(void* c_this, bool next);
	[LinkName("QPlainTextEdit_ContextMenuEvent")]
	public static extern void QPlainTextEdit_ContextMenuEvent(void* c_this, QContextMenuEvent e);
	[LinkName("QPlainTextEdit_DragEnterEvent")]
	public static extern void QPlainTextEdit_DragEnterEvent(void* c_this, QDragEnterEvent e);
	[LinkName("QPlainTextEdit_DragLeaveEvent")]
	public static extern void QPlainTextEdit_DragLeaveEvent(void* c_this, QDragLeaveEvent e);
	[LinkName("QPlainTextEdit_DragMoveEvent")]
	public static extern void QPlainTextEdit_DragMoveEvent(void* c_this, QDragMoveEvent e);
	[LinkName("QPlainTextEdit_DropEvent")]
	public static extern void QPlainTextEdit_DropEvent(void* c_this, QDropEvent e);
	[LinkName("QPlainTextEdit_FocusInEvent")]
	public static extern void QPlainTextEdit_FocusInEvent(void* c_this, QFocusEvent e);
	[LinkName("QPlainTextEdit_FocusOutEvent")]
	public static extern void QPlainTextEdit_FocusOutEvent(void* c_this, QFocusEvent e);
	[LinkName("QPlainTextEdit_ShowEvent")]
	public static extern void QPlainTextEdit_ShowEvent(void* c_this, QShowEvent param1);
	[LinkName("QPlainTextEdit_ChangeEvent")]
	public static extern void QPlainTextEdit_ChangeEvent(void* c_this, QEvent e);
	[LinkName("QPlainTextEdit_WheelEvent")]
	public static extern void QPlainTextEdit_WheelEvent(void* c_this, QWheelEvent e);
	[LinkName("QPlainTextEdit_CreateMimeDataFromSelection")]
	public static extern QMimeData QPlainTextEdit_CreateMimeDataFromSelection(void* c_this);
	[LinkName("QPlainTextEdit_CanInsertFromMimeData")]
	public static extern bool QPlainTextEdit_CanInsertFromMimeData(void* c_this, QMimeData source);
	[LinkName("QPlainTextEdit_InsertFromMimeData")]
	public static extern void QPlainTextEdit_InsertFromMimeData(void* c_this, QMimeData source);
	[LinkName("QPlainTextEdit_InputMethodEvent")]
	public static extern void QPlainTextEdit_InputMethodEvent(void* c_this, QInputMethodEvent param1);
	[LinkName("QPlainTextEdit_ScrollContentsBy")]
	public static extern void QPlainTextEdit_ScrollContentsBy(void* c_this, int32 dx, int32 dy);
	[LinkName("QPlainTextEdit_DoSetTextCursor")]
	public static extern void QPlainTextEdit_DoSetTextCursor(void* c_this, QTextCursor cursor);
	[LinkName("QPlainTextEdit_FirstVisibleBlock")]
	public static extern QTextBlock QPlainTextEdit_FirstVisibleBlock(void* c_this);
	[LinkName("QPlainTextEdit_ContentOffset")]
	public static extern QPointF QPlainTextEdit_ContentOffset(void* c_this);
	[LinkName("QPlainTextEdit_BlockBoundingRect")]
	public static extern QRectF QPlainTextEdit_BlockBoundingRect(void* c_this, QTextBlock block);
	[LinkName("QPlainTextEdit_BlockBoundingGeometry")]
	public static extern QRectF QPlainTextEdit_BlockBoundingGeometry(void* c_this, QTextBlock block);
	[LinkName("QPlainTextEdit_GetPaintContext")]
	public static extern QAbstractTextDocumentLayout__PaintContext QPlainTextEdit_GetPaintContext(void* c_this);
	[LinkName("QPlainTextEdit_ZoomInF")]
	public static extern void QPlainTextEdit_ZoomInF(void* c_this, float range);
	[LinkName("QPlainTextEdit_Tr2")]
	public static extern char8[] QPlainTextEdit_Tr2(char8[] s, char8[] c);
	[LinkName("QPlainTextEdit_Tr3")]
	public static extern char8[] QPlainTextEdit_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QPlainTextEdit_Find2")]
	public static extern bool QPlainTextEdit_Find2(void* c_this, char8[] exp, int64 options);
	[LinkName("QPlainTextEdit_Find22")]
	public static extern bool QPlainTextEdit_Find22(void* c_this, QRegularExpression exp, int64 options);
	[LinkName("QPlainTextEdit_MoveCursor2")]
	public static extern void QPlainTextEdit_MoveCursor2(void* c_this, int64 operation, int64 mode);
	[LinkName("QPlainTextEdit_ZoomIn1")]
	public static extern void QPlainTextEdit_ZoomIn1(void* c_this, int32 range);
	[LinkName("QPlainTextEdit_ZoomOut1")]
	public static extern void QPlainTextEdit_ZoomOut1(void* c_this, int32 range);
}
public struct QPlainTextDocumentLayout
{
	[LinkName("QPlainTextDocumentLayout_new")]
	public static extern void* QPlainTextDocumentLayout_new(QTextDocument document);
	[LinkName("QPlainTextDocumentLayout_MetaObject")]
	public static extern QMetaObject QPlainTextDocumentLayout_MetaObject(void* c_this);
	[LinkName("QPlainTextDocumentLayout_Metacast")]
	public static extern void QPlainTextDocumentLayout_Metacast(void* c_this, char8[] param1);
	[LinkName("QPlainTextDocumentLayout_Metacall")]
	public static extern int32 QPlainTextDocumentLayout_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QPlainTextDocumentLayout_Tr")]
	public static extern char8[] QPlainTextDocumentLayout_Tr(char8[] s);
	[LinkName("QPlainTextDocumentLayout_Draw")]
	public static extern void QPlainTextDocumentLayout_Draw(void* c_this, QPainter param1, QAbstractTextDocumentLayout__PaintContext param2);
	[LinkName("QPlainTextDocumentLayout_HitTest")]
	public static extern int32 QPlainTextDocumentLayout_HitTest(void* c_this, QPointF param1, int64 param2);
	[LinkName("QPlainTextDocumentLayout_PageCount")]
	public static extern int32 QPlainTextDocumentLayout_PageCount(void* c_this);
	[LinkName("QPlainTextDocumentLayout_DocumentSize")]
	public static extern QSizeF QPlainTextDocumentLayout_DocumentSize(void* c_this);
	[LinkName("QPlainTextDocumentLayout_FrameBoundingRect")]
	public static extern QRectF QPlainTextDocumentLayout_FrameBoundingRect(void* c_this, QTextFrame param1);
	[LinkName("QPlainTextDocumentLayout_BlockBoundingRect")]
	public static extern QRectF QPlainTextDocumentLayout_BlockBoundingRect(void* c_this, QTextBlock block);
	[LinkName("QPlainTextDocumentLayout_EnsureBlockLayout")]
	public static extern void QPlainTextDocumentLayout_EnsureBlockLayout(void* c_this, QTextBlock block);
	[LinkName("QPlainTextDocumentLayout_SetCursorWidth")]
	public static extern void QPlainTextDocumentLayout_SetCursorWidth(void* c_this, int32 width);
	[LinkName("QPlainTextDocumentLayout_CursorWidth")]
	public static extern int32 QPlainTextDocumentLayout_CursorWidth(void* c_this);
	[LinkName("QPlainTextDocumentLayout_RequestUpdate")]
	public static extern void QPlainTextDocumentLayout_RequestUpdate(void* c_this);
	[LinkName("QPlainTextDocumentLayout_DocumentChanged")]
	public static extern void QPlainTextDocumentLayout_DocumentChanged(void* c_this, int32 from, int32 param2, int32 charsAdded);
	[LinkName("QPlainTextDocumentLayout_Tr2")]
	public static extern char8[] QPlainTextDocumentLayout_Tr2(char8[] s, char8[] c);
	[LinkName("QPlainTextDocumentLayout_Tr3")]
	public static extern char8[] QPlainTextDocumentLayout_Tr3(char8[] s, char8[] c, int32 n);
}